Fixed an error with overlapping info in reporting/disputing modal

--- a/packages/augur-ui/src/modules/modal/modal.styles.less
+++ b/packages/augur-ui/src/modules/modal/modal.styles.less
@@ -3144,8 +3144,6 @@ div.ButtonsRow:last-of-type {
   max-width: 750px;
 
   > main {
-    display: flex;
-    flex-direction: column;
     padding: @size-16 0 0;
 
     > section {
